# man.io

./: .gitignore  .pre-commit-config.yaml  git_init.sh  pyproject.toml  setup.py
