[project]
name = "man-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.0",
    "setuptools>=75.6.0",
]

[tool.black]
line-length = 100
target-version = ['py313']
skip-string-normalization = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "docs",
    "tests",
    "venv",
    "*.egg-info"
]

[tool.isort]
profile = "black"
line_length = 100
known_third_party = ["fastapi", "sqlalchemy", "uvicorn", "alembic", "pydantic", "starlette"]
